# Giraffe

./: .gitignore  LICENSE.txt  Makefile.am  Makefile.in  RELNOTES.txt  TRADEMARKS.txt  aclocal.m4  configure  configure.ac  giraffe_7.0.3~beta1.orig.tar.gz.delta  giraffe_7.0.3~beta1.orig.tar.gz.id  kopano_8.0.1.orig.tar.xz.delta  kopano_8.1.0.orig.tar.xz.delta  kopanocore_8.1.0.orig.tar.xz.id  kopanocore_8.3.1.orig.tar.xz.delta  kopanocore_8.3.1.orig.tar.xz.id  kopanocore_8.3.2.orig.tar.gz.delta  kopanocore_8.3.2.orig.tar.gz.id  kopanocore_8.3.3.orig.tar.gz.delta  kopanocore_8.3.3.orig.tar.gz.id  kopanocore_8.3.4.orig.tar.gz.delta  kopanocore_8.3.4.orig.tar.gz.id  kopanocore_8.4.0~beta1.orig.tar.gz.delta  kopanocore_8.4.0~beta1.orig.tar.gz.id  kopanocore_8.5.0.orig.tar.xz.delta  kopanocore_8.5.0.orig.tar.xz.id  kopanocore_8.5.0~8.4.99.orig.tar.xz.delta  kopanocore_8.5.0~8.4.99.orig.tar.xz.id  kopanocore_8.5.2.orig.tar.xz.delta  kopanocore_8.5.2.orig.tar.xz.id  kopanocore_8.5.3.orig.tar.xz.delta  kopanocore_8.5.3.orig.tar.xz.id  kopanocore_8.5.4.orig.tar.xz.delta  kopanocore_8.5.4.orig.tar.xz.id  kopanocore_8.6.0.orig.tar.xz.delta  kopanocore_8.6.0.orig.tar.xz.id  kopanocore_8.6.1.orig.tar.xz.delta  kopanocore_8.6.1.orig.tar.xz.id  kopanocore_8.6.2.orig.tar.xz.delta  kopanocore_8.6.2.orig.tar.xz.id  (+20 more)
ECtools/: Makefile.am  Makefile.in
ECtools/admin/: zarafa-admin.cpp
ECtools/archiver/: ArchiveControlImpl.cpp  ArchiveControlImpl.h  ArchiveManage.h  ArchiveManageImpl.cpp  ArchiveManageImpl.h  ArchiveStateCollector.cpp  ArchiveStateCollector.h  ArchiveStateUpdater.cpp  ArchiveStateUpdater.h  Archiver.cpp  Archiver.h  ArchiverImpl.cpp  ArchiverImpl.h  ArchiverSession.cpp  ArchiverSession.h  ArchiverSessionPtr.h  AutoMAPI.h  ECArchiverLogger.cpp  ECArchiverLogger.h  ECDatabase.cpp  ECDatabase.h  archiver-common.cpp  archivestateupdater_fwd.h  main.cpp
ECtools/backup-plus/: Makefile.am  Makefile.in  README  setup.py  zarafa-backup-plus
ECtools/cfgchecker/: DAgentConfigCheck.cpp  DAgentConfigCheck.h  ECConfigCheck.cpp  ECConfigCheck.h  GatewayConfigCheck.cpp  GatewayConfigCheck.h  IcalConfigCheck.cpp  IcalConfigCheck.h  LDAPConfigCheck.cpp  LDAPConfigCheck.h  MonitorConfigCheck.cpp  MonitorConfigCheck.h  ServerConfigCheck.cpp  ServerConfigCheck.h  SpoolerConfigCheck.cpp  SpoolerConfigCheck.h  UnixConfigCheck.cpp  UnixConfigCheck.h  zarafa-cfg.cpp
ECtools/fsck/: Makefile.dist  zarafa-fsck-calendar.cpp  zarafa-fsck-contact.cpp  zarafa-fsck-main.cpp  zarafa-fsck-task.cpp  zarafa-fsck.cpp  zarafa-fsck.h
ECtools/monitor/: ECMonitorDefs.h  ECQuotaMonitor.cpp  ECQuotaMonitor.h  zarafa-monitor.cpp
ECtools/passwd/: zarafa-passwd.cpp
ECtools/presence/: Makefile.am  Makefile.in  README  setup.py  zarafa-presence
ECtools/stats/: zarafa-stats.cpp
ECtools/utils/: zarafa-mailbox-permissions  zarafa-set-oof
ECtools/zarafa-admin/: Makefile.am  Makefile.in  zarafa-admin.cpp
ECtools/zarafa-archiver/: ArchiveManage.h  (+35 more)
common/: CommonUtil.cpp  CommonUtil.h  ConsoleTable.cpp  ConsoleTable.h  ECABEntryID.cpp  ECABEntryID.h  ECACL.cpp  ECACL.h  ECCache.cpp  ECCache.h  ECChannel.cpp  ECChannel.h  ECChannelClient.cpp  ECChannelClient.h  ECConfig.cpp  ECConfig.h  ECConfigImpl.cpp  ECConfigImpl.h  ECDatabaseMySQL.cpp  ECDatabaseMySQL.h  ECDebug.cpp  ECDebug.h  ECDebugPrint.cpp  ECDebugPrint.h  ECFifoBuffer.cpp  ECFifoBuffer.h  ECFifoStream.cpp  ECFifoStream.h  ECGetText.cpp  ECGetText.h  ECGuid.cpp  ECGuid.h  ECIConv.cpp  ECIConv.h  ECInterfaceDefs.h  ECKeyTable.cpp  ECKeyTable.h  ECLogger.cpp  ECLogger.h  ECMemStream.cpp  (+73 more)
doc/: Makefile.am  Makefile.in  manual.xml  za-aclset.1  za-aclset.8  za-aclsync.1  za-aclsync.8  za-restore.1  za-restore.8  zarafa-admin.8  zarafa-archiver.1  zarafa-archiver.8  zarafa-archiver.cfg.5  zarafa-autorespond.1  zarafa-autorespond.8  zarafa-backup.8  zarafa-backup.cfg.5  zarafa-dagent.8  zarafa-dagent.cfg.5  zarafa-fsck.1  zarafa-gateway.8  zarafa-gateway.cfg.5  zarafa-ical.8  zarafa-ical.cfg.5  zarafa-indexer.cfg.5  zarafa-ldap.cfg.5  zarafa-ldapms.cfg.5  zarafa-licensed.8  zarafa-licensed.cfg.5  zarafa-mailbox-permissions.8  zarafa-monitor.8  zarafa-monitor.cfg.5  zarafa-mr-accept.8  zarafa-mr-process.8  zarafa-msr-verify.8  zarafa-msr.8  zarafa-msr.cfg.5  zarafa-passwd.1  zarafa-report.8  zarafa-restore.8  (+10 more)
gateway/: ClientProto.h  Gateway.cpp  IMAP.cpp  IMAP.h  Makefile.am  Makefile.in  POP3.cpp  POP3.h
libfreebusy/: ECEnumFBBlock.cpp  ECEnumFBBlock.h  ECFBBlockList.cpp  ECFBBlockList.h  ECFreeBusyData.cpp  ECFreeBusyData.h  ECFreeBusySupport.cpp  ECFreeBusySupport.h  ECFreeBusyUpdate.cpp  ECFreeBusyUpdate.h  Makefile.am  Makefile.in  PublishFreeBusy.cpp  PublishFreeBusy.h  freebusy.h  freebusyguid.h  freebusytags.h  freebusyutil.cpp  freebusyutil.h  recurrence.cpp  recurrence.h
m4lcommon/: CommonUtil.cpp  CommonUtil.h  ECDefs.h  ECFeatureList.h  ECFeatures.cpp  ECFeatures.h  ECInterfaceDefs.h  ECInvariantChecker.h  ECIterators.cpp  ECIterators.h  ECMAPIDebug.cpp  ECMAPIDebug.h  ECMemTable.cpp  ECMemTable.h  ECRestriction.cpp  ECRestriction.h  ECTags.h  EMSAbTag.h  HrException.h  IECChangeAdviseSink.h  IECChangeAdvisor.h  IECExchangeModifyTable.h  IECExportAddressbookChanges.h  IECExportChanges.h  IECImportAddressbookChanges.h  IECImportContentsChanges.h  IECImportHierarchyChanges.h  IECLicense.h  IECMultiStoreTable.h  IECSecurity.h  IECServiceAdmin.h  IECSingleInstance.h  IECSpooler.h  IECStatsCollector.h  IECTestProtocol.h  IECUnknown.h  IMAPIOffline.h  MAPIConsoleTable.cpp  MAPIConsoleTable.h  MAPINotifSink.cpp  (+21 more)
spooler/: DAgent.cpp  LMTP.cpp  LMTP.h  Makefile.am  Makefile.in  PyMapiPlugin.cpp  PyMapiPlugin.h  PythonSWIGRuntime.h  Spooler.cpp  archive.cpp  archive.h  mailer.cpp  mailer.h  rules.cpp  rules.h  spmain.h
testunit/: Makefile.am  Makefile.in  imtomapi.cpp
zarafa-libsync/: ECLibSync.h  ECOfflineABImporter.cpp  ECOfflineABImporter.h  ECResyncSet.cpp  ECResyncSet.h  ECSync.cpp  ECSync.h  ECSyncContext.cpp  ECSyncContext.h  ECSyncLog.cpp  ECSyncLog.h  ECSyncSettings.cpp  ECSyncSettings.h  ECSyncUtil.cpp  ECSyncUtil.h  Makefile.am  Makefile.in
(+1355 files in other folders)
